B&L QA/objects/Contact_Profile__c.object
<CustomObject>
    <description>To store profile questions related to Contact</description>
    <fields>
        <fullName>AMO_Complete_pct__c</fullName>
        <defaultValue>0</defaultValue>
        <description>ECS</description>
        <label>AMO Complete %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>A_constant_Personalized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>USSUR</description>
        <label>A-constant Personalized?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accommodating_Toric__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Accommodating Toric</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accommodating_Volume__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Accommodating Volume</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accurus_Use__c</fullName>
        <description>USSUR</description>
        <label>Accurus % Use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Also_Using__c</fullName>
        <label>Also Using</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AcriTec</fullName>
                </value>
                <value>
                    <fullName>Acrysof</fullName>
                </value>
                <value>
                    <fullName>Acrysof IQ</fullName>
                </value>
                <value>
                    <fullName>Acrysof Natural</fullName>
                </value>
                <value>
                    <fullName>Afinity</fullName>
                </value>
                <value>
                    <fullName>Akreos</fullName>
                </value>
                <value>
                    <fullName>Akreos AO</fullName>
                </value>
                <value>
                    <fullName>Akreos MICS</fullName>
                </value>
                <value>
                    <fullName>Corneal</fullName>
                </value>
                <value>
                    <fullName>Crystalens</fullName>
                </value>
                <value>
                    <fullName>Elastimide</fullName>
                </value>
                <value>
                    <fullName>Hoya</fullName>
                </value>
                <value>
                    <fullName>I Symm</fullName>
                </value>
                <value>
                    <fullName>MI60</fullName>
                </value>
                <value>
                    <fullName>Nano-Flex</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>PhysIOL</fullName>
                </value>
                <value>
                    <fullName>Rayner</fullName>
                </value>
                <value>
                    <fullName>Restor+3</fullName>
                </value>
                <value>
                    <fullName>Sensar</fullName>
                </value>
                <value>
                    <fullName>SofPort</fullName>
                </value>
                <value>
                    <fullName>Tecnis</fullName>
                </value>
                <value>
                    <fullName>Tecnis CL</fullName>
                </value>
                <value>
                    <fullName>Tecnis MTF</fullName>
                </value>
                <value>
                    <fullName>Tecnis W/OptiEdge</fullName>
                </value>
                <value>
                    <fullName>Zeiss-IOLtech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anesthesia__c</fullName>
        <description>USSUR</description>
        <inlineHelpText>What type of anesthesia does the surgeon use?</inlineHelpText>
        <label>Anesthesia</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Topical</fullName>
                </value>
                <value>
                    <fullName>Retrobulbar</fullName>
                </value>
                <value>
                    <fullName>Peribulbar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aqueous_Deficient_Dry_Eye__c</fullName>
        <description>ECS</description>
        <label>Aqueous-Deficient Dry Eye</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Soothe PF</fullName>
                </value>
                <value>
                    <fullName>Systane</fullName>
                </value>
                <value>
                    <fullName>Refresh</fullName>
                </value>
                <value>
                    <fullName>Optive</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_CL_outcomes_good__c</fullName>
        <label>Are CL outcomes good?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_of_Influence__c</fullName>
        <description>ECS Used to indicate the area of influence.  Depending on the answers, different sections of the page are expected to be completed: if CL, then care kit section; if Vitamins, then Vitamin questions; if dry eye than dry eye questions and all applicable combinations</description>
        <label>Area of Influence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CL Solutions</fullName>
                </value>
                <value>
                    <fullName>Dry Eye</fullName>
                </value>
                <value>
                    <fullName>Vitamins</fullName>
                </value>
                <value>
                    <fullName>CL Solutions &amp; Dry Eye &amp; Vitamins</fullName>
                </value>
                <value>
                    <fullName>CL Solutions &amp; Dry Eye</fullName>
                </value>
                <value>
                    <fullName>CL Solutions &amp; Vitamins</fullName>
                </value>
                <value>
                    <fullName>Dry Eye &amp; Vitamins</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astigmatism_How_Controlled__c</fullName>
        <description>USSUR</description>
        <inlineHelpText>How does this Surgeon control for Astigmatism?</inlineHelpText>
        <label>Astigmatism - How Controlled?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LRI/AK</fullName>
                </value>
                <value>
                    <fullName>Lasik</fullName>
                </value>
                <value>
                    <fullName>Femto</fullName>
                </value>
                <value>
                    <fullName>It&apos;s Not</fullName>
                </value>
                <value>
                    <fullName>Nomogram used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Autorefraction_done_after_CL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CCP</description>
        <label>Autorefraction done after CL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B_L_IOL_User__c</fullName>
        <description>Does the surgeon use Bausch &amp; Lomb IOLS? If so to what extent?
Used by EMEA SU.</description>
        <label>B&amp;L IOL User</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>&lt;25%</fullName>
                </value>
                <value>
                    <fullName>25-50%</fullName>
                </value>
                <value>
                    <fullName>&gt;50%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B_L_Market_Share__c</fullName>
        <description>Market Share</description>
        <label>B+L Market Share %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Better_Efficacy_vs_Acanthamoeba_and_MRSA__c</fullName>
        <description>ECS</description>
        <inlineHelpText>Disinfection Efficacy against Acanthamoeba and MRSA</inlineHelpText>
        <label>Better Efficacy vs Acanthamoeba and MRSA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Better_compat_w_All_Soft_Lens_Material__c</fullName>
        <description>ECS</description>
        <inlineHelpText>Compatibility with all soft lens material – including SiHy</inlineHelpText>
        <label>Better compat w/ all soft lens material</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bio_Compatibility_with_tear_film__c</fullName>
        <description>ECS</description>
        <label>Bio-Compatibility with tear film</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biometry_Axial_Length__c</fullName>
        <description>USSUR</description>
        <label>Biometry - Axial Length</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IOL Master</fullName>
                </value>
                <value>
                    <fullName>Lenstar</fullName>
                </value>
                <value>
                    <fullName>Immersion</fullName>
                </value>
                <value>
                    <fullName>Contact Applanation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biometry_K_Readings__c</fullName>
        <description>USSUR</description>
        <label>Biometry - K Readings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IOL Master</fullName>
                </value>
                <value>
                    <fullName>Manual K&apos;s</fullName>
                </value>
                <value>
                    <fullName>Pentacam/Galilea</fullName>
                </value>
                <value>
                    <fullName>Orbscan</fullName>
                </value>
                <value>
                    <fullName>Atlas (Zeiss)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CL_Segmentation__c</fullName>
        <description>USSUR CL Segmentation</description>
        <formula>IF( Premium_IOL_Volume__c *What_of_Premium_IOL_is_CL__c  &gt;(15*12), &quot;A&quot;,
 if(Premium_IOL_Volume__c*What_of_Premium_IOL_is_CL__c  &gt;=60, &quot;B&quot;,
     if ( Premium_IOL_Volume__c *What_of_Premium_IOL_is_CL__c&gt;0,&quot;C&quot;, null
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CL Segmentation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CL_Volume__c</fullName>
        <description>USSUR CL volume calculation</description>
        <formula>Premium_IOL_Volume__c * What_of_Premium_IOL_is_CL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CL Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Day__c</fullName>
        <description>IndiaSU field to collect the day on which the sales/service executive can call the physician</description>
        <label>Call Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MON</fullName>
                </value>
                <value>
                    <fullName>TUE</fullName>
                </value>
                <value>
                    <fullName>WED</fullName>
                </value>
                <value>
                    <fullName>THU</fullName>
                </value>
                <value>
                    <fullName>FRI</fullName>
                </value>
                <value>
                    <fullName>SAT</fullName>
                </value>
                <value>
                    <fullName>SUN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Per_Month__c</fullName>
        <label>Call Per Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Time__c</fullName>
        <description>IndiaSU field to collect the time at which the sales rep can have call with the physician</description>
        <label>Call Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cap_Vac_Aspiration_Flow_in_cc_min__c</fullName>
        <description>USSUR</description>
        <label>Cap Vac Aspiration Flow in cc/min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cap_Vac_Bottle_Height_in_cm__c</fullName>
        <description>USSUR</description>
        <label>Cap Vac Bottle Height in cm</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cap_Vac_Vacuum_in_mmHg__c</fullName>
        <description>USSUR</description>
        <label>Cap Vac Vacuum in mmHg</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capsulorhexis__c</fullName>
        <description>USSUR</description>
        <label>Capsulorhexis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cystotome (needle)</fullName>
                </value>
                <value>
                    <fullName>Forcep (uttrata)</fullName>
                </value>
                <value>
                    <fullName>Femto - Lensx</fullName>
                </value>
                <value>
                    <fullName>Femto - Victus</fullName>
                </value>
                <value>
                    <fullName>Femto - Optimedica</fullName>
                </value>
                <value>
                    <fullName>Femto - Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cataract_Procedure_Volume__c</fullName>
        <description>Average volume of cataract procedures performed by this surgeon.
Used by EMEA SU. and USSUR</description>
        <inlineHelpText>Annual</inlineHelpText>
        <label>Cataract Procedure Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Checks_all_3_distances__c</fullName>
        <description>CCP</description>
        <label>Checks all 3 distances?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, most of the time</fullName>
                </value>
                <value>
                    <fullName>Sometimes, needs guidance</fullName>
                </value>
                <value>
                    <fullName>Rarely, needs work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ciba_Clear_Care_pct__c</fullName>
        <defaultValue>0</defaultValue>
        <description>ECS</description>
        <label>Ciba Clear Care %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Compatibility_w_all_soft_lens_material__c</fullName>
        <description>ECS</description>
        <inlineHelpText>Compatibility with all soft lens material – including SiHy</inlineHelpText>
        <label>Compatibility w/ all soft lens material</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Constellation_Use__c</fullName>
        <description>USSUR percentage</description>
        <label>Constellation % Use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contact_Medical_Title__c</fullName>
        <formula>(TEXT ( Contact__r.Medical_Title__c ))</formula>
        <label>Contact Medical Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Profiles</relationshipLabel>
        <relationshipName>Contact_Profiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cortical_Removal_Aspir_Flow_in_cc_min__c</fullName>
        <description>USSUR</description>
        <label>Cortical Removal Aspir Flow in cc/min</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cortical_Removal_Bottle_Height_in_cm__c</fullName>
        <description>USSUR</description>
        <label>Cortical Removal Bottle Height in cm</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cortical_Removal_Vacuum_in_mmHg__c</fullName>
        <description>USSUR</description>
        <label>Cortical Removal Vacuum in mmHg</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cut_off_before_using_Toric_lenses__c</fullName>
        <description>USSUR</description>
        <label>Cut off before using Toric lenses</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not Treat</fullName>
                </value>
                <value>
                    <fullName>0.00</fullName>
                </value>
                <value>
                    <fullName>0.25</fullName>
                </value>
                <value>
                    <fullName>0.50</fullName>
                </value>
                <value>
                    <fullName>0.75</fullName>
                </value>
                <value>
                    <fullName>1.00</fullName>
                </value>
                <value>
                    <fullName>1.25</fullName>
                </value>
                <value>
                    <fullName>1.50</fullName>
                </value>
                <value>
                    <fullName>1.75</fullName>
                </value>
                <value>
                    <fullName>2.00</fullName>
                </value>
                <value>
                    <fullName>2.25</fullName>
                </value>
                <value>
                    <fullName>2.50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cyclo_when_J3_or_worse__c</fullName>
        <description>CCP</description>
        <label>Cyclo when J3 or worse</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, most of the time</fullName>
                </value>
                <value>
                    <fullName>Sometimes, needs guidance</fullName>
                </value>
                <value>
                    <fullName>Rarely, needs work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cycloplegic_refraction_10_day__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CCP</description>
        <label>Cycloplegic refraction 10-day?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_A_constant_Completed__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>USSUR</description>
        <label>Date A-constant Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diligent_Cortical_Cleanup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CCP</description>
        <label>Diligent Cortical Cleanup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dispense_Renu_Val_1__c</fullName>
        <description>ECS</description>
        <formula>CASE(  Efficacy_vs_ISO_stand_alone_standards__c ,&quot;1&quot;, 1, &quot;2&quot;, 2,&quot;3&quot;,3,&quot;4&quot;,4,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dispense Renu Val 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dispense_Renu_Val_2__c</fullName>
        <description>ECS</description>
        <formula>CASE(   Efficacy_vs_Acanthamoeba_and_MRSA__c  ,&quot;1&quot;, 1, &quot;2&quot;, 2,&quot;3&quot;,3,&quot;4&quot;,4,0)</formula>
        <label>Dispense Renu Val 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dispense_Renu_Val_3__c</fullName>
        <description>ECS</description>
        <formula>CASE(   Compatibility_w_all_soft_lens_material__c  ,&quot;1&quot;, 1, &quot;2&quot;, 2,&quot;3&quot;,3,&quot;4&quot;,4,0)</formula>
        <label>Dispense Renu Val 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_you_have_access_to_LASIK_PRK__c</fullName>
        <description>USSUR</description>
        <label>Do you have access to LASIK/PRK?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes - I Own a Laser</fullName>
                </value>
                <value>
                    <fullName>Yes - I Go to a LASIK center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doctor_Segmentation__c</fullName>
        <label>Doctor Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical Innovator</fullName>
                </value>
                <value>
                    <fullName>Clinical Conservative</fullName>
                </value>
                <value>
                    <fullName>Business Innovator</fullName>
                </value>
                <value>
                    <fullName>Business Conservative</fullName>
                </value>
                <value>
                    <fullName>Hydrophobic</fullName>
                </value>
                <value>
                    <fullName>Hydrophilic</fullName>
                </value>
                <value>
                    <fullName>Both - more Phobic</fullName>
                </value>
                <value>
                    <fullName>Both - more Philic</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_a_good_Fog_refraction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CCP</description>
        <label>Does a good “Fog” refraction?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <description>used by ECS</description>
        <label>Education</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Efficacy_vs_Acanthamoeba_and_MRSA__c</fullName>
        <description>ECS</description>
        <inlineHelpText>Disinfection Efficacy against Acanthamoeba and MRSA</inlineHelpText>
        <label>Efficacy vs. Acanthamoeba and MRSA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Efficacy_vs_ISO_stand_alone_standards__c</fullName>
        <description>ECS</description>
        <inlineHelpText>Disinfection Efficacy against ISO stand alone standards</inlineHelpText>
        <label>Efficacy vs. ISO stand alone standards</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Epinucleus_Aspiration_Flow_in_cc_min__c</fullName>
        <description>USSUR</description>
        <label>Epinucleus Aspiration Flow in cc/min</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Epinucleus_Bottle_Height_in_cc__c</fullName>
        <description>USSUR</description>
        <label>Epinucleus Bottle Height in cc</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Epinucleus_Power__c</fullName>
        <description>USSUR</description>
        <label>Epinucleus Power</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Epinucleus_Vacuum_in_mmHg__c</fullName>
        <description>USSUR</description>
        <label>Epinucleus Vacuum in mmHg</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evaporative_Dry_Eye__c</fullName>
        <description>ECS</description>
        <label>Evaporative Dry Eye</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Soothe XP</fullName>
                </value>
                <value>
                    <fullName>Systane</fullName>
                </value>
                <value>
                    <fullName>Refresh</fullName>
                </value>
                <value>
                    <fullName>Optive</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Choice_Brand_Daily_Disposable__c</fullName>
        <label>First Choice Brand - Daily Disposable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-day Acuvue</fullName>
                </value>
                <value>
                    <fullName>1-day Acuvue Moist</fullName>
                </value>
                <value>
                    <fullName>Clearsight 1-day</fullName>
                </value>
                <value>
                    <fullName>Dailies Aqua Comfort Plus</fullName>
                </value>
                <value>
                    <fullName>Focus Dailies</fullName>
                </value>
                <value>
                    <fullName>Proclear 1-day</fullName>
                </value>
                <value>
                    <fullName>SofLens Daily Disposable</fullName>
                </value>
                <value>
                    <fullName>Biomedics One Day</fullName>
                </value>
                <value>
                    <fullName>Acuvue True Eyes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Choice_Brand_Lens_Care__c</fullName>
        <label>First Choice Brand - Lens Care</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ReNu</fullName>
                </value>
                <value>
                    <fullName>Refresh</fullName>
                </value>
                <value>
                    <fullName>Express</fullName>
                </value>
                <value>
                    <fullName>Clear Care</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Equate</fullName>
                </value>
                <value>
                    <fullName>Other PL</fullName>
                </value>
                <value>
                    <fullName>Opti Free RepleniSH</fullName>
                </value>
                <value>
                    <fullName>ReNu MultiPlus</fullName>
                </value>
                <value>
                    <fullName>Solo Care Aqua</fullName>
                </value>
                <value>
                    <fullName>Complete Easy Rub</fullName>
                </value>
                <value>
                    <fullName>Sensitive Eyes MPS</fullName>
                </value>
                <value>
                    <fullName>Opti Free Express</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>